# hk

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  eslint.config.mjs  hk-example.pkl  hk.code-workspace  hk.pkl  hk.usage.kdl  lefthook.yml  mise.toml  package.json
.github/workflows/: ci.yml  docs.yml  release.yml
benchmark/: .pre-commit-config.yaml  benchmark.sh  hk.pkl  lefthook.yml
docs/: .gitignore  about.md  configuration.md  environment_variables.md  eslint.config.mjs  getting_started.md  hk.pkl.md  hooks.md  index.md  mise_integration.md  package.json  pkl.tmLanguage.json  pkl_introduction.md
docs/.vitepress/: config.mts
docs/cli/: builtins.md  check.md  commands.json  completion.md  config.md  fix.md  generate.md  index.md  init.md  install.md  run.md  uninstall.md  validate.md  version.md
docs/cli/cache/: clear.md
docs/cli/run/: commit-msg.md  pre-commit.md  pre-push.md  prepare-commit-msg.md
docs/public/v0/: hk.pkl
docs/public/v0/builtins/: actionlint.pkl  biome.pkl  black.pkl  brakeman.pkl  cargo_check.pkl  cargo_clippy.pkl  deno_check.pkl  erb.pkl  fasterer.pkl  flake8.pkl  go_fmt.pkl  go_fumpt.pkl  go_vet.pkl  golangci_lint.pkl  gomod_tidy.pkl  isort.pkl  ktlint.pkl  markdown_lint.pkl  nix_fmt.pkl  php_cs.pkl  prettier_package_json.pkl  reek.pkl  revive.pkl  rubocop.pkl  ruff.pkl  rustfmt.pkl  sorbet.pkl  standard_js.pkl  terraform.pkl  tf_lint.pkl  tsserver.pkl  yamllint.pkl
mise-tasks/: benchmark.sh  package-pkl.sh  update-version.sh
pkl/: Builtins.pkl  Config.pkl  PklProject  builtins.pkl  hk.pkl
pkl/builtins/: actionlint.pkl  alejandra.pkl  astro.pkl  biome.pkl  black.pkl  brakeman.pkl  bundle_audit.pkl  cargo_check.pkl  cargo_clippy.pkl  cargo_fmt.pkl  clang_format.pkl  cpp_lint.pkl  deno.pkl  deno_check.pkl  erb.pkl  err_check.pkl  eslint.pkl  fasterer.pkl  flake8.pkl  go_fmt.pkl  go_fumpt.pkl  go_imports.pkl  go_lines.pkl  go_sec.pkl  go_vet.pkl  go_vuln_check.pkl  golangci_lint.pkl  gomod_tidy.pkl  hadolint.pkl  isort.pkl  jq.pkl  ktlint.pkl  luacheck.pkl  markdown_lint.pkl  mypy.pkl  newlines.pkl  nix_fmt.pkl  nixpkgs_format.pkl  ox_lint.pkl  php_cs.pkl  (+31 more)
src/: cache.rs  config.rs  env.rs  error.rs  file_rw_locks.rs  git.rs  glob.rs  hash.rs  hook.rs  hook_options.rs  logger.rs  main.rs  settings.rs  step.rs  step_context.rs  step_depends.rs  step_group.rs  step_job.rs  step_locks.rs  step_queue.rs  step_response.rs  step_scheduler.rs  tera.rs  version.rs
src/cli/: builtins.rs  check.rs  completion.rs  config.rs  fix.rs  generate.rs  init.rs  install.rs  mod.rs  uninstall.rs  usage.rs  validate.rs  version.rs
src/cli/cache/: clear.rs  mod.rs
src/cli/run/: commit_msg.rs  mod.rs  pre_commit.rs  pre_push.rs  prepare_commit_msg.rs
src/ui/: style.rs
test/: arg_escape.bats  builtins.bats  check.bats  commit_msg.bats  condition.bats  depends.bats  dir.bats  exclude.bats  git.bats  pre_push.bats  prepare_commit_msg.bats  test.bats  tsc.bats  uninstall.bats  untracked_all.bats  validate.bats
test/data/: eslint.config.mjs  package-lock.json  package.json  unpretty.js
test/test_helper/: common_setup.bash
