[package]
name = "hk"
version = "0.6.2"
edition = "2024"
description = "A tool for managing git hooks"
license = "MIT"
repository = "https://github.com/jdx/hk"
documentation = "https://hk.jdx.dev"
homepage = "https://hk.jdx.dev"
include = ["/src/**/*", "/Cargo.toml", "/Cargo.lock", "/README.md", "/LICENSE", "/CHANGELOG.md", "/pkl"]
rust-version = "1.85"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dirs = "6"
duct = "0.13"
ensembler = "0.2"
git2 = "0.20"
globset = "0.4"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.14"
log = "0.4"
rpkl = {version="0.4", features=["indexmap"]}
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_yaml = "0.9"
serde_json = "1"
tera = "1"
thiserror = "2"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
toml = "0.8"
xx = { version = "2", features = ["http", "hash", "rustls"] }
strum = { version = "0.27", features = ["derive"] }
clx = "0.2"
semver = "1.0.25"
clap_usage = "2.0.3"
which = "7.0.2"
siphasher = "1.0.1"
once_cell = "1.20.3"
eyre = "0.6.12"
color-eyre = "0.6.3"

[profile.serious]
inherits = "release"
lto = true

[package.metadata.release]
pre-release-hook = ["mise", "run", "pre-release", "--version", "{{version}}"]
pre-release-replacements = [
    {file="pkl/Config.pkl", search='min_hk_version = ".*"', replace='min_hk_version = "{{version | truncate(length=1)}}.0.0"'},
]
