[package]
name = "hk"
version = "1.1.1"
edition = "2024"
description = "A tool for managing git hooks"
license = "MIT"
repository = "https://github.com/jdx/hk"
documentation = "https://hk.jdx.dev"
homepage = "https://hk.jdx.dev"
include = ["/src/**/*", "/Cargo.toml", "/Cargo.lock", "/README.md", "/LICENSE", "/CHANGELOG.md", "/pkl", "/build.rs"]
rust-version = "1.85"
build = "build.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_usage = "2"
clx = "0.2"
color-eyre = "0.6"
console = "0.15"
dirs = "6"
ensembler = "0.2"
expr-lang = { version = "0.3.0", features = ["serde"] }
eyre = "0.6"
getrandom = "0.3.2"
git2 = "0.20"
globset = "0.4"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.14"
log = "0.4"
once_cell = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_with = "3"
serde_yaml = "0.9"
shell-quote = "0.7"
siphasher = "1"
strum = { version = "0.27", features = ["derive"] }
tera = "1"
thiserror = "2"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7"
toml = "0.8"
which = "7"
xx = { version = "2", features = ["http", "hash", "rustls"] }

[profile.serious]
inherits = "release"
lto = true

[package.metadata.release]
pre-release-hook = ["mise", "run", "pre-release", "--version", "{{version}}"]
pre-release-replacements = [
    {file="pkl/Config.pkl", search='min_hk_version = ".*"', replace='min_hk_version = "{{version | truncate(length=1)}}.0.0"'},
]
